--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.19.2
   firebase_core: ^2.30.0
   firebase_storage: ^11.7.2
+  sign_in_button: ^3.2.0
 
 dev_dependencies:
   flutter_test:
